hphp/hack/test/typecheck/await_in_expressions4.php.exp
File "await_in_expressions4.php", line 5, characters 9-15:
Await cannot be used as an expression (Parsing[1002])
